# CHelper

./: .gitignore  .gitmodules  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build-android.yml  build-doc.yml  build-wasm.yml  build-web.yml  cmake-ubuntu.yml  cmake-windows.yml  deploy-doc.yml  deploy-web.yml  test-resource.yml
CHelper-Android/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
CHelper-Android/app/: build.gradle.kts  proguard-rules.pro
CHelper-Android/app/src/main/: AndroidManifest.xml
CHelper-Android/app/src/main/assets/about/: open_source_terms.txt  release_note.txt
CHelper-Android/gradle/: libs.versions.toml
CHelper-Core/: CMakeLists.txt
CHelper-Core/include/: pch.h
CHelper-Core/src/apps/: CHelperAndroid.cpp  CHelperResourceGenerator.cpp  CHelperResourceGenerator.h  CHelperWeb.cpp
CHelper-Core/src/apps/qt/: CHelperQt.cpp  CHelperQt.h
CHelper-Core/src/apps/qt/assets/: release-experiment-1.21.132.1.cpack
CHelper-Core/src/chelper/: CHelperCore.cpp  CHelperCore.h
CHelper-Core/src/chelper/auto_suggestion/: AutoSuggestion.cpp  AutoSuggestion.h  Suggestion.cpp  Suggestion.h  Suggestions.cpp  Suggestions.h
CHelper-Core/src/chelper/command_structure/: CommandStructure.cpp  CommandStructure.h  StructureBuilder.cpp  StructureBuilder.h
CHelper-Core/src/chelper/lexer/: Lexer.cpp  Lexer.h  LexerResult.cpp  LexerResult.h  Token.cpp  Token.h  TokenReader.cpp  TokenReader.h
CHelper-Core/src/chelper/linter/: Linter.cpp  Linter.h
CHelper-Core/src/chelper/node/: CommandNode.cpp  CommandNode.h  NodeInitialization.cpp  NodeInitialization.h  NodeType.cpp  NodeType.h  NodeWithType.cpp  NodeWithType.h
CHelper-Core/src/chelper/old2new/: Old2New.cpp  Old2New.h
CHelper-Core/src/chelper/parameter_hint/: ParameterHint.cpp  ParameterHint.h
CHelper-Core/src/chelper/parser/: ASTNode.cpp  ASTNode.h  ErrorReason.cpp  ErrorReason.h  Parser.cpp  Parser.h  TokensView.cpp  TokensView.h
CHelper-Core/src/chelper/resources/: CPack.cpp  CPack.h  Manifest.h
CHelper-Core/src/chelper/resources/id/: BlockId.cpp  BlockId.h  ItemId.cpp  ItemId.h  NamespaceId.cpp  NamespaceId.h  NormalId.cpp  NormalId.h
CHelper-Core/src/chelper/serialization/: Serialization.h
CHelper-Core/src/chelper/syntax_highlight/: SyntaxHighlight.h  SyntaxHightlight.cpp  SyntaxResult.cpp  SyntaxResult.h
CHelper-Core/src/chelper/util/: JsonUtil.cpp  JsonUtil.h  KMPMatcher.cpp  KMPMatcher.h  Profile.cpp  Profile.h  StringUtil.h
CHelper-Core/tests/: BinaryUtilTest.cpp  ColorStringTest.cpp  KMPMatcherTest.cpp  MainTest.cpp  Old2NewTest.cpp
CHelper-Doc/: package.json
CHelper-Doc/.vitepress/: config.mts
CHelper-Doc/src/: chelper-release-notes.md  index.md
CHelper-Doc/src/cpack/: command.md  id.md  manifest.md  node.md
CHelper-Doc/src/development/: android.md  core.md  web.md
CHelper-Resource/resources/beta/experiment/: manifest.json
CHelper-Resource/resources/beta/experiment/command/: camera.json  clear.json  fog.json  gametest.json  hud.json  kill.json  locate.json  mobevent.json  music.json  packstack.json  place.json  reload.json  replaceitem.json  say.json  script.json  spreadplayers.json  stopsound.json  tellraw.json  tickingarea.json
CHelper-Resource/resources/beta/vanilla/: manifest.json
CHelper-Resource/resources/beta/vanilla/command/: camera.json  clone.json  controlscheme.json  enchant.json  particle.json  structure.json  teleport.json  testforblock.json
CHelper-Resource/resources/beta/vanilla/repeat/: execute.json
CHelper-Resource/resources/netease/experiment/: manifest.json
CHelper-Resource/resources/netease/experiment/command/: aimassist.json  alwaysday.json  camerashake.json  deop.json  event.json  help.json  list.json  locate.json  op.json  place.json  playanimation.json  recipe.json  scoreboard.json  script.json  summon.json  testforblocks.json  volumearea.json
CHelper-Resource/resources/netease/vanilla/: manifest.json
CHelper-Resource/resources/netease/vanilla/command/: camera.json  clearspawnpoint.json  dialogue.json  effect.json  loot.json  playsound.json  reload.json  ride.json  schedule.json  setmaxplayers.json  title.json  wb.json  weather.json
CHelper-Resource/resources/release/experiment/: manifest.json
CHelper-Resource/resources/release/experiment/command/: aimassist.json  camera.json  damage.json  function.json  gamemode.json  inputpermission.json  me.json  place.json  save.json  schedule.json  scriptevent.json  setblock.json  setworldspawn.json  tag.json  tell.json  testfor.json  titleraw.json  toggledownfall.json  volumearea.json  xp.json
CHelper-Resource/resources/release/vanilla/: manifest.json
CHelper-Resource/resources/release/vanilla/command/: difficulty.json  effect.json  execute.json  fill.json  gamerule.json  give.json  kick.json  listd.json  loot.json  place.json  reload.json  spawnpoint.json  time.json
CHelper-Resource/test/: test.txt
CHelper-Web/: README.md  package.json  pnpm-lock.yaml
CHelper-Web/src/: App.vue
CHelper-Web/src/assets/: beta-experiment-1.26.0.29.cpack  beta-vanilla-1.26.0.29.cpack  libCHelperWeb.wasm  netease-experiment-1.21.50.07.cpack  netease-vanilla-1.21.50.07.cpack  release-vanilla-1.21.132.1.cpack
CHelper-Web/src/core/: CPackManager.js  libCHelperWeb.js
script/: build.py  build_android_core.py  build_web_core.py
(+211 files in other folders)
